--- a/Gath-Geva-clustering.ipynb
+++ b/Gath-Geva-clustering.ipynb
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 299,
    "outputs": [],
    "source": [
     "def WUOFC(data, K_max, cluster_validity_criteria, max_iters = 50, fuzziness = 2, tol = 0.001):\n",
@@ -542,7 +542,6 @@
     "        #centroids, membership, loss = kmeans_with_exponential_kernel(data, k,centroids, max_iterations=100, gamma=2.0)\n",
     "\n",
     "        C.append(centroids)\n",
-    "        print(f\"c = {C}\")\n",
     "        # calculate the cluster validity criteria V for the partition.\n",
     "        V.append(cluster_validity_criteria(data, centroids, membership))\n",
     "        print(f'K = {k} : V = {V[-1]}')\n",
@@ -571,8 +570,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-22T12:47:09.706480Z",
-     "end_time": "2023-07-22T12:47:09.738965Z"
+     "start_time": "2023-07-22T13:07:13.133257Z",
+     "end_time": "2023-07-22T13:07:13.182247Z"
     }
    }
   },
@@ -597,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 297,
    "outputs": [],
    "source": [
     "def trace_criterion(data, centroids, membership):\n",
@@ -608,19 +607,16 @@
     "    clusters = [data[np.argmax(membership,axis=1)==i] for i in range(K)]\n",
     "\n",
     "    V = 0\n",
-    "\n",
-    "\n",
     "    for k in range(K):\n",
-    "        distances = np.linalg.norm(clusters[k][:, None] - centroids[k], axis=2)\n",
-    "\n",
-    "        V += np.sum( distances**2) *  clusters[k].shape[0]*K\n",
+    "        S_W = np.cov(clusters[k].T)\n",
+    "        V += np.trace(S_W)* (1/clusters[k].shape[0])\n",
     "    return V\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-22T10:30:20.578207Z",
-     "end_time": "2023-07-22T10:30:20.646139Z"
+     "start_time": "2023-07-22T13:06:36.058359Z",
+     "end_time": "2023-07-22T13:06:36.098456Z"
     }
    }
   },
@@ -857,18 +853,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 300,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "K = 2 : V = 672441.3294763587\n",
-      "K = 3 : V = 664232.0668459802\n",
-      "K = 4 : V = 123119.75338843137\n",
-      "K = 5 : V = 81875.61733130508\n",
-      "K = 6 : V = 85557.84053267649\n",
-      "K = 7 : V = 53475.038665264285\n"
+      "K = 1 : V = 0.007395763749086953\n",
+      "K = 2 : V = 0.009581240280736876\n",
+      "K = 3 : V = 0.010613260147552551\n",
+      "K = 4 : V = 0.013454278238745652\n",
+      "K = 5 : V = 0.015022195829366359\n",
+      "K = 6 : V = 0.017154465059891353\n"
      ]
     },
     {
@@ -974,8 +970,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-22T11:51:11.928785Z",
-     "end_time": "2023-07-22T11:51:14.908005Z"
+     "start_time": "2023-07-22T13:07:30.939366Z",
+     "end_time": "2023-07-22T13:07:34.062258Z"
     }
    }
   },
